// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Molecules/Radio passes the snapshot test for basic setup 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Check me!"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [],
        },
      }
    }
    collapsable={false}
    direction="horizontal"
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
        "transform": Array [],
      }
    }
  >
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
          "transform": Array [],
        }
      }
    >
      <RNGestureHandlerButton
        collapsable={false}
        exclusive={true}
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        rippleColor={0}
      >
        <View
          accessibilityLabel="Press me!"
          accessibilityRole="button"
          accessible={true}
          style={Object {}}
        >
          <View
            animatedStyle={
              Object {
                "value": Object {
                  "transform": Array [],
                },
              }
            }
            collapsable={false}
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "center",
                "backgroundColor": "#EDF1F7",
                "borderColor": "#EDF1F7",
                "borderRadius": 1000,
                "borderWidth": 2,
                "display": "flex",
                "height": 24,
                "justifyContent": "center",
                "padding": 5,
                "transform": Array [],
                "width": 24,
              }
            }
          >
            <View
              animatedStyle={
                Object {
                  "value": Object {
                    "transform": Array [],
                  },
                }
              }
              checkedBackgroundColor="neutral.50"
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": "100%",
                  "transform": Array [],
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </RNGestureHandlerButton>
    </View>
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "transform": Array [],
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "400",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
            "transform": Array [],
          }
        }
        variant="p2"
      >
        Check me!
      </Text>
    </View>
  </View>
</View>
`;

exports[`Molecules/Radio passes the snapshot test for different color schemes 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Primary Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [],
        },
      }
    }
    collapsable={false}
    direction="horizontal"
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
        "transform": Array [],
      }
    }
  >
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
          "transform": Array [],
        }
      }
    >
      <RNGestureHandlerButton
        collapsable={false}
        exclusive={true}
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        rippleColor={0}
      >
        <View
          accessibilityLabel="Press me!"
          accessibilityRole="button"
          accessible={true}
          style={Object {}}
        >
          <View
            animatedStyle={
              Object {
                "value": Object {
                  "transform": Array [],
                },
              }
            }
            collapsable={false}
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "center",
                "backgroundColor": "#EDF1F7",
                "borderColor": "#EDF1F7",
                "borderRadius": 1000,
                "borderWidth": 2,
                "display": "flex",
                "height": 24,
                "justifyContent": "center",
                "padding": 5,
                "transform": Array [],
                "width": 24,
              }
            }
          >
            <View
              animatedStyle={
                Object {
                  "value": Object {
                    "transform": Array [],
                  },
                }
              }
              checkedBackgroundColor="neutral.50"
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": "100%",
                  "transform": Array [],
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </RNGestureHandlerButton>
    </View>
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "transform": Array [],
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "400",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
            "transform": Array [],
          }
        }
        variant="p2"
      >
        Primary Radio
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Secondary Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [],
        },
      }
    }
    collapsable={false}
    direction="horizontal"
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
        "transform": Array [],
      }
    }
  >
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
          "transform": Array [],
        }
      }
    >
      <RNGestureHandlerButton
        collapsable={false}
        exclusive={true}
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        rippleColor={0}
      >
        <View
          accessibilityLabel="Press me!"
          accessibilityRole="button"
          accessible={true}
          style={Object {}}
        >
          <View
            animatedStyle={
              Object {
                "value": Object {
                  "transform": Array [],
                },
              }
            }
            collapsable={false}
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "center",
                "backgroundColor": "#EDF1F7",
                "borderColor": "#EDF1F7",
                "borderRadius": 1000,
                "borderWidth": 2,
                "display": "flex",
                "height": 24,
                "justifyContent": "center",
                "padding": 5,
                "transform": Array [],
                "width": 24,
              }
            }
          >
            <View
              animatedStyle={
                Object {
                  "value": Object {
                    "transform": Array [],
                  },
                }
              }
              checkedBackgroundColor="neutral.50"
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": "100%",
                  "transform": Array [],
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </RNGestureHandlerButton>
    </View>
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "transform": Array [],
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "400",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
            "transform": Array [],
          }
        }
        variant="p2"
      >
        Secondary Radio
      </Text>
    </View>
  </View>
</View>
`;

exports[`Molecules/Radio passes the snapshot test for different sizes 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Small Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [],
        },
      }
    }
    collapsable={false}
    direction="horizontal"
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
        "transform": Array [],
      }
    }
  >
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
          "transform": Array [],
        }
      }
    >
      <RNGestureHandlerButton
        collapsable={false}
        exclusive={true}
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        rippleColor={0}
      >
        <View
          accessibilityLabel="Press me!"
          accessibilityRole="button"
          accessible={true}
          style={Object {}}
        >
          <View
            animatedStyle={
              Object {
                "value": Object {
                  "transform": Array [],
                },
              }
            }
            collapsable={false}
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "center",
                "backgroundColor": "#EDF1F7",
                "borderColor": "#EDF1F7",
                "borderRadius": 1000,
                "borderWidth": 2,
                "display": "flex",
                "height": 18,
                "justifyContent": "center",
                "padding": 3,
                "transform": Array [],
                "width": 18,
              }
            }
          >
            <View
              animatedStyle={
                Object {
                  "value": Object {
                    "transform": Array [],
                  },
                }
              }
              checkedBackgroundColor="neutral.50"
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": "100%",
                  "transform": Array [],
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </RNGestureHandlerButton>
    </View>
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "transform": Array [],
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "400",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
            "transform": Array [],
          }
        }
        variant="p2"
      >
        Small Radio
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Regular Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [],
        },
      }
    }
    collapsable={false}
    direction="horizontal"
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
        "transform": Array [],
      }
    }
  >
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
          "transform": Array [],
        }
      }
    >
      <RNGestureHandlerButton
        collapsable={false}
        exclusive={true}
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        rippleColor={0}
      >
        <View
          accessibilityLabel="Press me!"
          accessibilityRole="button"
          accessible={true}
          style={Object {}}
        >
          <View
            animatedStyle={
              Object {
                "value": Object {
                  "transform": Array [],
                },
              }
            }
            collapsable={false}
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "center",
                "backgroundColor": "#EDF1F7",
                "borderColor": "#EDF1F7",
                "borderRadius": 1000,
                "borderWidth": 2,
                "display": "flex",
                "height": 24,
                "justifyContent": "center",
                "padding": 5,
                "transform": Array [],
                "width": 24,
              }
            }
          >
            <View
              animatedStyle={
                Object {
                  "value": Object {
                    "transform": Array [],
                  },
                }
              }
              checkedBackgroundColor="neutral.50"
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": "100%",
                  "transform": Array [],
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </RNGestureHandlerButton>
    </View>
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "transform": Array [],
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "400",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
            "transform": Array [],
          }
        }
        variant="p2"
      >
        Regular Radio
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Large Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [],
        },
      }
    }
    collapsable={false}
    direction="horizontal"
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
        "transform": Array [],
      }
    }
  >
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
          "transform": Array [],
        }
      }
    >
      <RNGestureHandlerButton
        collapsable={false}
        exclusive={true}
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        rippleColor={0}
      >
        <View
          accessibilityLabel="Press me!"
          accessibilityRole="button"
          accessible={true}
          style={Object {}}
        >
          <View
            animatedStyle={
              Object {
                "value": Object {
                  "transform": Array [],
                },
              }
            }
            collapsable={false}
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "center",
                "backgroundColor": "#EDF1F7",
                "borderColor": "#EDF1F7",
                "borderRadius": 1000,
                "borderWidth": 2,
                "display": "flex",
                "height": 30,
                "justifyContent": "center",
                "padding": 7,
                "transform": Array [],
                "width": 30,
              }
            }
          >
            <View
              animatedStyle={
                Object {
                  "value": Object {
                    "transform": Array [],
                  },
                }
              }
              checkedBackgroundColor="neutral.50"
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": "100%",
                  "transform": Array [],
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </RNGestureHandlerButton>
    </View>
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "transform": Array [],
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 18.4,
            "fontStyle": "normal",
            "fontWeight": "400",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 24,
            "transform": Array [],
          }
        }
        variant="p1"
      >
        Large Radio
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Extra Large Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [],
        },
      }
    }
    collapsable={false}
    direction="horizontal"
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
        "transform": Array [],
      }
    }
  >
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
          "transform": Array [],
        }
      }
    >
      <RNGestureHandlerButton
        collapsable={false}
        exclusive={true}
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        rippleColor={0}
      >
        <View
          accessibilityLabel="Press me!"
          accessibilityRole="button"
          accessible={true}
          style={Object {}}
        >
          <View
            animatedStyle={
              Object {
                "value": Object {
                  "transform": Array [],
                },
              }
            }
            collapsable={false}
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "center",
                "backgroundColor": "#EDF1F7",
                "borderColor": "#EDF1F7",
                "borderRadius": 1000,
                "borderWidth": 2,
                "display": "flex",
                "height": 36,
                "justifyContent": "center",
                "padding": 9,
                "transform": Array [],
                "width": 36,
              }
            }
          >
            <View
              animatedStyle={
                Object {
                  "value": Object {
                    "transform": Array [],
                  },
                }
              }
              checkedBackgroundColor="neutral.50"
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": "100%",
                  "transform": Array [],
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </RNGestureHandlerButton>
    </View>
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "transform": Array [],
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 18.4,
            "fontStyle": "normal",
            "fontWeight": "400",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 24,
            "transform": Array [],
          }
        }
        variant="p1"
      >
        Extra Large Radio
      </Text>
    </View>
  </View>
</View>
`;

exports[`Molecules/Radio passes the snapshot test for different variants 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Filled Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [],
        },
      }
    }
    collapsable={false}
    direction="horizontal"
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
        "transform": Array [],
      }
    }
  >
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
          "transform": Array [],
        }
      }
    >
      <RNGestureHandlerButton
        collapsable={false}
        exclusive={true}
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        rippleColor={0}
      >
        <View
          accessibilityLabel="Press me!"
          accessibilityRole="button"
          accessible={true}
          style={Object {}}
        >
          <View
            animatedStyle={
              Object {
                "value": Object {
                  "transform": Array [],
                },
              }
            }
            collapsable={false}
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "center",
                "backgroundColor": "#EDF1F7",
                "borderColor": "#EDF1F7",
                "borderRadius": 1000,
                "borderWidth": 2,
                "display": "flex",
                "height": 24,
                "justifyContent": "center",
                "padding": 5,
                "transform": Array [],
                "width": 24,
              }
            }
          >
            <View
              animatedStyle={
                Object {
                  "value": Object {
                    "transform": Array [],
                  },
                }
              }
              checkedBackgroundColor="neutral.50"
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": "100%",
                  "transform": Array [],
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </RNGestureHandlerButton>
    </View>
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "transform": Array [],
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "400",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
            "transform": Array [],
          }
        }
        variant="p2"
      >
        Filled Radio
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Outline Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [],
        },
      }
    }
    collapsable={false}
    direction="horizontal"
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
        "transform": Array [],
      }
    }
  >
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
          "transform": Array [],
        }
      }
    >
      <RNGestureHandlerButton
        collapsable={false}
        exclusive={true}
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        rippleColor={0}
      >
        <View
          accessibilityLabel="Press me!"
          accessibilityRole="button"
          accessible={true}
          style={Object {}}
        >
          <View
            animatedStyle={
              Object {
                "value": Object {
                  "transform": Array [],
                },
              }
            }
            collapsable={false}
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "#C5CEE0",
                "borderRadius": 1000,
                "borderWidth": 2,
                "display": "flex",
                "height": 24,
                "justifyContent": "center",
                "padding": 5,
                "transform": Array [],
                "width": 24,
              }
            }
          >
            <View
              animatedStyle={
                Object {
                  "value": Object {
                    "transform": Array [],
                  },
                }
              }
              checkedBackgroundColor="primary.500"
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": "100%",
                  "transform": Array [],
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </RNGestureHandlerButton>
    </View>
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "transform": Array [],
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "400",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
            "transform": Array [],
          }
        }
        variant="p2"
      >
        Outline Radio
      </Text>
    </View>
  </View>
</View>
`;

exports[`Molecules/Radio passes the snapshot test when in a checked state 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Checked Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": true,
        "disabled": false,
      }
    }
    accessible={true}
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [],
        },
      }
    }
    collapsable={false}
    direction="horizontal"
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
        "transform": Array [],
      }
    }
  >
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
          "transform": Array [],
        }
      }
    >
      <RNGestureHandlerButton
        collapsable={false}
        exclusive={true}
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        rippleColor={0}
      >
        <View
          accessibilityLabel="Press me!"
          accessibilityRole="button"
          accessible={true}
          style={Object {}}
        >
          <View
            animatedStyle={
              Object {
                "value": Object {
                  "transform": Array [],
                },
              }
            }
            collapsable={false}
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "center",
                "backgroundColor": "#6A7BFF",
                "borderColor": "#6A7BFF",
                "borderRadius": 1000,
                "borderWidth": 2,
                "display": "flex",
                "height": 24,
                "justifyContent": "center",
                "padding": 5,
                "transform": Array [],
                "width": 24,
              }
            }
          >
            <View
              animatedStyle={
                Object {
                  "value": Object {
                    "transform": Array [],
                  },
                }
              }
              checkedBackgroundColor="neutral.50"
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": "100%",
                  "transform": Array [],
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </RNGestureHandlerButton>
    </View>
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "transform": Array [],
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "400",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
            "transform": Array [],
          }
        }
        variant="p2"
      >
        Checked Radio
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Checked Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": true,
        "disabled": false,
      }
    }
    accessible={true}
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [],
        },
      }
    }
    collapsable={false}
    direction="horizontal"
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
        "transform": Array [],
      }
    }
  >
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
          "transform": Array [],
        }
      }
    >
      <RNGestureHandlerButton
        collapsable={false}
        exclusive={true}
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        rippleColor={0}
      >
        <View
          accessibilityLabel="Press me!"
          accessibilityRole="button"
          accessible={true}
          style={Object {}}
        >
          <View
            animatedStyle={
              Object {
                "value": Object {
                  "transform": Array [],
                },
              }
            }
            collapsable={false}
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "#6A7BFF",
                "borderRadius": 1000,
                "borderWidth": 2,
                "display": "flex",
                "height": 24,
                "justifyContent": "center",
                "padding": 5,
                "transform": Array [],
                "width": 24,
              }
            }
          >
            <View
              animatedStyle={
                Object {
                  "value": Object {
                    "transform": Array [],
                  },
                }
              }
              checkedBackgroundColor="primary.500"
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "#6A7BFF",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": "100%",
                  "transform": Array [],
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </RNGestureHandlerButton>
    </View>
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "transform": Array [],
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "400",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
            "transform": Array [],
          }
        }
        variant="p2"
      >
        Checked Radio
      </Text>
    </View>
  </View>
</View>
`;

exports[`Molecules/Radio passes the snapshot test when in an error state 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Error Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [],
        },
      }
    }
    collapsable={false}
    direction="horizontal"
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
        "transform": Array [],
      }
    }
  >
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
          "transform": Array [],
        }
      }
    >
      <RNGestureHandlerButton
        collapsable={false}
        exclusive={true}
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        rippleColor={0}
      >
        <View
          accessibilityLabel="Press me!"
          accessibilityRole="button"
          accessible={true}
          style={Object {}}
        >
          <View
            animatedStyle={
              Object {
                "value": Object {
                  "transform": Array [],
                },
              }
            }
            collapsable={false}
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "center",
                "backgroundColor": "#EDF1F7",
                "borderColor": "#FF4B42",
                "borderRadius": 1000,
                "borderWidth": 2,
                "display": "flex",
                "height": 24,
                "justifyContent": "center",
                "padding": 5,
                "transform": Array [],
                "width": 24,
              }
            }
          >
            <View
              animatedStyle={
                Object {
                  "value": Object {
                    "transform": Array [],
                  },
                }
              }
              checkedBackgroundColor="neutral.50"
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": "100%",
                  "transform": Array [],
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </RNGestureHandlerButton>
    </View>
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "transform": Array [],
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "400",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
            "transform": Array [],
          }
        }
        variant="p2"
      >
        Error Radio
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Error Radio with message"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [],
        },
      }
    }
    collapsable={false}
    direction="horizontal"
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
        "transform": Array [],
      }
    }
  >
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
          "transform": Array [],
        }
      }
    >
      <RNGestureHandlerButton
        collapsable={false}
        exclusive={true}
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        rippleColor={0}
      >
        <View
          accessibilityLabel="Press me!"
          accessibilityRole="button"
          accessible={true}
          style={Object {}}
        >
          <View
            animatedStyle={
              Object {
                "value": Object {
                  "transform": Array [],
                },
              }
            }
            collapsable={false}
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "center",
                "backgroundColor": "#EDF1F7",
                "borderColor": "#FF4B42",
                "borderRadius": 1000,
                "borderWidth": 2,
                "display": "flex",
                "height": 24,
                "justifyContent": "center",
                "padding": 5,
                "transform": Array [],
                "width": 24,
              }
            }
          >
            <View
              animatedStyle={
                Object {
                  "value": Object {
                    "transform": Array [],
                  },
                }
              }
              checkedBackgroundColor="neutral.50"
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": "100%",
                  "transform": Array [],
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </RNGestureHandlerButton>
    </View>
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "transform": Array [],
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "400",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
            "transform": Array [],
          }
        }
        variant="p2"
      >
        Error Radio with message
      </Text>
    </View>
  </View>
  <Text
    accessibilityRole="text"
    accessible={true}
    allowFontScaling={true}
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [],
        },
      }
    }
    collapsable={false}
    style={
      Object {
        "color": "#FF4B42",
        "display": "flex",
        "fontFamily": "Poppins-Regular",
        "fontSize": 13.799999999999999,
        "fontStyle": "normal",
        "fontWeight": "400",
        "includeFontPadding": false,
        "letterSpacing": 0,
        "lineHeight": 20,
        "marginBottom": 4,
        "transform": Array [],
      }
    }
    variant="caption"
  >
    This is an error message!
  </Text>
</View>
`;

exports[`Molecules/Radio passes the snapshot test when using style props 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Button press"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [],
        },
      }
    }
    collapsable={false}
    direction="horizontal"
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "#6A7BFF",
        "borderColor": "#C5CEE0",
        "borderWidth": 2,
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
        "transform": Array [],
      }
    }
  >
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
          "transform": Array [],
        }
      }
    >
      <RNGestureHandlerButton
        collapsable={false}
        exclusive={true}
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        rippleColor={0}
      >
        <View
          accessibilityLabel="Press me!"
          accessibilityRole="button"
          accessible={true}
          style={Object {}}
        >
          <View
            animatedStyle={
              Object {
                "value": Object {
                  "transform": Array [],
                },
              }
            }
            collapsable={false}
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "center",
                "backgroundColor": "#EDF1F7",
                "borderColor": "#EDF1F7",
                "borderRadius": 1000,
                "borderWidth": 2,
                "display": "flex",
                "height": 24,
                "justifyContent": "center",
                "padding": 5,
                "transform": Array [],
                "width": 24,
              }
            }
          >
            <View
              animatedStyle={
                Object {
                  "value": Object {
                    "transform": Array [],
                  },
                }
              }
              checkedBackgroundColor="neutral.50"
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": "100%",
                  "transform": Array [],
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </RNGestureHandlerButton>
    </View>
    <View
      animatedStyle={
        Object {
          "value": Object {
            "transform": Array [],
          },
        }
      }
      collapsable={false}
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "transform": Array [],
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animatedStyle={
          Object {
            "value": Object {
              "transform": Array [],
            },
          }
        }
        collapsable={false}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "400",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
            "transform": Array [],
          }
        }
        variant="p2"
      >
        Button press
      </Text>
    </View>
  </View>
</View>
`;
